--- a/autoencoder/linear-autoencoder/Simple_Autoencoder_Exercise.ipynb
+++ b/autoencoder/linear-autoencoder/Simple_Autoencoder_Exercise.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "### Compressed Representation\n",
     "\n",
-    "A compressed representation can be great for saving and sharing any kind of data in a way that is more efficient than storing raw data. In practice, the compressed representation often holds key information about an input image and we can use it for denoising images or oher kinds of reconstruction and transformation!\n",
+    "A compressed representation can be great for saving and sharing any kind of data in a way that is more efficient than storing raw data. In practice, the compressed representation often holds key information about an input image and we can use it for denoising images or other kinds of reconstruction and transformation!\n",
     "\n",
     "<img src='notebook_ims/denoising.png' width=60%/>\n",
     "\n",
